--- a/.github/workflows/edge.yml
+++ b/.github/workflows/edge.yml
@@ -15,12 +15,22 @@ jobs:
         os: [macos-latest, windows-latest]
         ruby: [ 2.7, 3.1 ]
     steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
+      - name: Checkout source tree
+        uses: actions/checkout@v2
+      - name: Set Windows resolution
+        if: matrix.os == 'windows-latest'
+        run: Set-DisplayResolution -Width 1920 -Height 1080 -Force
+      - name: Set Mac resolution
+        if: ${{ matrix.os == 'macos-latest' }}
+        run: |
+          system_profiler SPDisplaysDataType | grep Resolution
+          "/Library/Application Support/VMware Tools/vmware-resolutionSet" 2560 1440
+          system_profiler SPDisplaysDataType | grep Resolution
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - run: bundle install
-      - run: |
-          bundle exec rake spec:edge
-        env:
-          DISPLAY: :99
+      - name: Install gems
+        run: bundle install
+      - name: Run tests
+        run: bundle exec rake spec:chrome
