--- a/.github/workflows/safari.yml
+++ b/.github/workflows/safari.yml
@@ -14,13 +14,25 @@ jobs:
       matrix:
         ruby: [ 2.7, 3.1 ]
     steps:
-      - uses: actions/checkout@v2
-      - uses: ./.github/actions/enable-safari
-      - uses: ruby/setup-ruby@v1
+      - name: Checkout source tree
+        uses: actions/checkout@v2
+      - name: Set Mac resolution
+        run: |
+          system_profiler SPDisplaysDataType | grep Resolution
+          "/Library/Application Support/VMware Tools/vmware-resolutionSet" 2560 1440
+          system_profiler SPDisplaysDataType | grep Resolution
+      - name: Install Ruby
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
-      - run: bundle install
-      - run: |
-          bundle exec rake spec:safari
-        env:
-          DISPLAY: :99
+      - name: Install gems
+        run: bundle install
+      - name: Configure safaridriver
+        run: |
+          defaults write com.apple.Safari IncludeDevelopMenu YES
+          defaults write com.apple.Safari AllowRemoteAutomation 1
+          sudo safaridriver --enable
+          safaridriver --version
+          safaridriver -p 0 &
+      - name: Run tests
+        run: bundle exec rake spec:safari
