--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -33,7 +33,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2', 'jruby-9.4.0.0', 'truffleruby-22.3.0']
     steps:
       - name: Checkout source tree
         uses: actions/checkout@v2
