--- a/.github/workflows/chrome.yml
+++ b/.github/workflows/chrome.yml
@@ -41,6 +41,14 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
       - name: Install gems
         run: bundle install
+      - name: Remove driver directories Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          rm "$env:ChromeWebDriver" -r -v
+      - name: Remove driver directories Non-Windows
+        if: matrix.os != 'windows-latest'
+        run: |
+          sudo rm -rf $CHROMEWEBDRIVER
       - name: Run tests
         run: bundle exec rake spec:chrome
         env:
