--- a/.github/workflows/firefox.yml
+++ b/.github/workflows/firefox.yml
@@ -41,7 +41,15 @@ jobs:
           ruby-version: ${{ matrix.ruby }}
       - name: Install gems
         run: bundle install
+      - name: Remove driver directories Windows
+        if: matrix.os == 'windows-latest'
+        run: |
+          rm "$env:GeckoWebDriver" -r -v
+      - name: Remove driver directories Non-Windows
+        if: matrix.os != 'windows-latest'
+        run: |
+          sudo rm -rf $GECKOWEBDRIVER
       - name: Run tests
-        run: bundle exec rake spec:chrome
+        run: bundle exec rake spec:firefox
         env:
           DISPLAY: :99
