--- a/.github/workflows/safari.yml
+++ b/.github/workflows/safari.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   local-tests:
     name: Local Tests
-    runs-on: macos-latest
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
